:bug: default rounded border on safari fixed

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -202,11 +202,7 @@ footer a,
 }
 
 .about-link--mobile {
-  @apply inline-block;
-  @apply px-[10px];
-  @apply first:pl-0;
-  @apply last:pr-0;
-  @apply border-black;
+  @apply inline-block px-[10px] first:pl-0 last:pr-0 border-black;
 }
 
 .content-header {
@@ -306,6 +302,10 @@ body {
 
 .input-wrapper--left {
   @apply md:w-1/3;
+
+  input {
+    @apply rounded-none;
+  }
 }
 
 .input-radio {
@@ -314,12 +314,9 @@ body {
     background: url(/images/unchecked.svg);
     width: 19px;
     height: 19px;
-    @apply mr-2;
-    @apply bg-no-repeat;
-    @apply bg-contain;
-    @apply inline-block;
-    @apply align-top;
+    @apply bg-no-repeat mr-2 bg-contain inline-block align-top;
   }
+
   &:checked + span:before {
     background: url(/images/checked.svg);
   }
